--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 para o Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: 0a01dd2b0d8a1039178e3593475f9a87639ccdcd
+source-git-commit: 4956b940dfd25f55eaf67296f2cb31db65fac079
 workflow-type: tm+mt
-source-wordcount: '1795'
-ht-degree: 4%
+source-wordcount: '1865'
+ht-degree: 5%
 
 ---
 
@@ -17,9 +17,9 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 
 - [[!DNL Data Science Workspace]](#dsw)
 - [[!DNL Destinations]](#destinations)
+- [[Coleta de dados]](#data-collection)
 - [Experience Data Model (XDM)](#xdm)
 - [Serviço de query](#query-service)
-- [Conexões do Real-time Customer Data Platform](#data-collection)
 - [Fontes](#sources)
 
 ## [!DNL Data Science Workspace] {#dsw}
@@ -61,6 +61,23 @@ Para obter informações mais gerais sobre o Data Science Workspace, consulte o 
 {style=&quot;table-layout:auto&quot;}
 
 Para obter informações mais gerais sobre destinos, consulte [visão geral dos destinos](../../destinations/home.md).
+
+## Coleta de dados {#data-collection}
+
+A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente e enviá-los para a Adobe Experience Platform Edge Network, onde podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não-Adobe.
+
+**Novos recursos**
+
+| Recurso | Descrição |
+| --- | --- |
+| [Configuração de tipo de acesso para datastreams](../../edge/datastreams/overview.md#create) | Ao criar um novo armazenamento de dados, você pode selecionar o tipo de solicitações que deseja que a Rede de Borda aceite: <ul><li>**[!UICONTROL Autenticação mista]**: Quando essa opção é selecionada, a Edge Network aceita solicitações autenticadas e não autenticadas. Selecione essa opção quando planeja usar o SDK da Web ou [SDK móvel](https://aep-sdks.gitbook.io/docs/), juntamente com o [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Apenas Autenticado]**: Quando essa opção é selecionada, a Rede de Borda aceita apenas solicitações autenticadas. Selecione essa opção quando planeja usar somente a API do servidor e deseja impedir que qualquer solicitação não autenticada seja processada pela variável [!DNL Edge Network]. </li></ul> |
+| [Renderizar apresentações](../../edge/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem aumentar métricas. | O recém-adicionado `applyPropositions` permite renderizar ou executar uma matriz de propostas a partir de [!DNL Target] em aplicativos de página única, sem aumentar o [!DNL Analytics] e [!DNL Target] métricas. Isso aumenta a precisão dos relatórios. |
+| [Compartilhamento de IDs entre dispositivos móveis e domínios](../../edge/identity/id-sharing.md) | O SDK da Web da Adobe Experience Platform agora é compatível com recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
+| [Extensão de tag da Camada de dados Google](../../tags/extensions/web/google-data-layer/overview.md) | A extensão Camada de dados da Google permite usar uma camada de dados da Google na implementação de tags. |
+| [Extensão de encaminhamento de eventos de Conversões aprimoradas do Google Ads](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.108630.html) | A extensão Conversões aprimoradas do Google Ads permite aprimorar as conversões do Google Ads em tempo real. |
+| [Extensão de encaminhamento de evento de mailchimp](../../tags/extensions/web/mailchimp/overview.md) | A extensão de encaminhamento de evento Mailchimp envia eventos para a API de Marketing Mailchimp que pode acionar emails para campanhas de marketing, jornadas ou transações de Mailchimp. |
+
+Para obter mais informações, consulte o [visão geral da coleta de dados](../../rtcdp-connections/home.md).
 
 ## Experience Data Model (XDM) {#xdm}
 
@@ -116,20 +133,6 @@ O Serviço de Consulta permite que você use o SQL padrão para consultar dados 
 {style=&quot;table-layout:auto&quot;}
 
 Para obter mais informações sobre Serviços de query, consulte [Visão geral do Serviço de query](../../query-service/home.md).
-
-## Conexões do Real-time Customer Data Platform {#data-collection}
-
-O Real-time Customer Data Platform Connections fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente e enviá-los para a Adobe Experience Platform Edge Network, onde podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
-
-**Novos recursos**
-
-| Recurso | Descrição |
-| --- | --- |
-| [Configuração de tipo de acesso para datastreams](../../edge/datastreams/overview.md#create) | Ao criar um novo armazenamento de dados, você pode selecionar o tipo de solicitações que deseja que a Rede de Borda aceite: <ul><li>**[!UICONTROL Autenticação mista]**: Quando essa opção é selecionada, a Edge Network aceita solicitações autenticadas e não autenticadas. Selecione essa opção quando planeja usar o SDK da Web ou [SDK móvel](https://aep-sdks.gitbook.io/docs/), juntamente com o [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Apenas Autenticado]**: Quando essa opção é selecionada, a Rede de Borda aceita apenas solicitações autenticadas. Selecione essa opção quando planeja usar somente a API do servidor e deseja impedir que qualquer solicitação não autenticada seja processada pela variável [!DNL Edge Network]. </li></ul> |
-| [Renderizar apresentações](../../edge/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem aumentar métricas. | O recém-adicionado `applyPropositions` permite renderizar ou executar uma matriz de propostas a partir de [!DNL Target] em aplicativos de página única, sem aumentar o [!DNL Analytics] e [!DNL Target] métricas. Isso aumenta a precisão dos relatórios. |
-| [Compartilhamento de IDs entre dispositivos móveis e domínios](../../edge/identity/id-sharing.md) | O SDK da Web da Adobe Experience Platform agora é compatível com recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
-
-Para obter mais informações, consulte o [Visão geral das conexões do Real-Time CDP](../../rtcdp-connections/home.md).
 
 ## Fontes {#sources}
 
