Updated by task 'AutomatedMDTask_1658786895116_TM-MT_1658787031636'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/1c95a6e15d3d52d33f4a10f834a5f74080e6b3c9

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 50c36862c16192457696a55aabc3e0a60af233d3
+source-git-commit: bfb6ff054feea6dc0dcc1c98dadb158be79a284b
 workflow-type: tm+mt
-source-wordcount: '310'
-ht-degree: 9%
+source-wordcount: '944'
+ht-degree: 5%
 
 ---
 
@@ -15,6 +15,7 @@ ht-degree: 9%
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
 - [[!DNL Data Prep]](#data-prep)
+- [Experience Data Model (XDM)](#xdm)
 - [Fontes](#sources)
 
 ## [!DNL Data Prep] {#data-prep}
@@ -31,6 +32,40 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 {style=&quot;table-layout:auto&quot;}
 
 Para saber mais sobre [!DNL Data Prep], consulte o [[!DNL Data Prep] visão geral](../../data-prep/home.md).
+
+## Experience Data Model (XDM) {#xdm}
+
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Ao seguir os padrões XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de uma maneira mais rápida e integrada. Você pode obter informações valiosas das ações do cliente, definir públicos-alvo do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+
+**Novos componentes XDM**
+
+>[!WARNING]
+>
+>Os novos componentes XDM listados na tabela abaixo são experimentais e estão atualmente em teste. Espera-se que esses componentes sejam atualizados com mudanças de quebra (se necessário) antes de serem estabilizados. Planeje seus esforços de desenvolvimento adequadamente.
+
+| Tipo de componente | Nome | Descrição |
+| --- | --- | --- |
+| Classe | [[!UICONTROL Tempo]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | Uma classe baseada em registros usada para capturar dados meteorológicos. |
+| Grupo de campos | [[!UICONTROL Tempo atual]](https://github.com/adobe/xdm/blob/master/components/classes/weather.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar as condições meteorológicas atuais de um código postal. |
+| Grupo de campos | [[!UICONTROL Tempo Previsto]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/forecasted-weather.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar as condições meteorológicas previstas para um código postal. |
+| Grupo de campos | [[!UICONTROL Acionadores do produto]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/product-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores específicos do produto que aproveitam as condições climáticas conhecidas para impulsionar o comportamento do consumidor. |
+| Grupo de campos | [[!UICONTROL Acionadores relativos]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/relative-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores relativos que aproveitam as condições meteorológicas conhecidas para impulsionar o comportamento do consumidor. |
+| Grupo de campos | [[!UICONTROL Acionadores graves]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/severe-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores que aproveitam condições meteorológicas graves conhecidas por impulsionar o comportamento do consumidor. |
+| Grupo de campos | [[!UICONTROL Acionadores do tempo]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/shared/weather-triggers.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] e [!UICONTROL Tempo] classes, usadas para capturar acionadores gerais que aproveitam as condições meteorológicas conhecidas para impulsionar o comportamento do consumidor. |
+| Grupo de campos | [[!UICONTROL Detalhes da interação com MediaCollection]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-collection.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação de mídia. |
+| Grupo de campos | [[!UICONTROL Detalhes da interação com o MediaReporting]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/experienceevent-media-reporting.schema.json) | Um grupo de campos para a variável [!UICONTROL ExperiênciaEvento XDM] classe que captura detalhes sobre uma interação com relatórios de mídia. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingdetails.schema.json) | Captura detalhes sobre um ativo de anúncio. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do pod de publicidade]](https://github.com/adobe/xdm/blob/master/components/datatypes/advertisingpoddetails.schema.json) | Captura detalhes sobre um pod de publicidade, que é uma sequência de vários anúncios reproduzidos de um único ad break. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do capítulo]](https://github.com/adobe/xdm/blob/master/components/datatypes/chapterdetails.schema.json) | Captura detalhes sobre um capítulo ou segmento em um conteúdo de vídeo. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/blob/master/components/datatypes/errordetails.schema.json) | Captura detalhes sobre um erro de reprodução de vídeo. |
+| Tipo de dados | [[!UICONTROL Informações sobre detalhes do evento do player]](https://github.com/adobe/xdm/blob/master/components/datatypes/playereventdetails.schema.json) | Captura detalhes relacionados ao evento sobre um reprodutor de vídeo, incluindo a posição do indicador de reprodução e a ID da sessão. |
+| Tipo de dados | [[!UICONTROL Informações de dados do estado do player]](https://github.com/adobe/xdm/blob/master/components/datatypes/playerstatedata.schema.json) | Captura detalhes relacionados ao estado sobre um reprodutor de vídeo. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes de dados de Qoe]](https://github.com/adobe/xdm/blob/master/components/datatypes/qoedatadetails.schema.json) | Captura detalhes de qualidade da experiência (QoE) sobre um evento de reprodução de vídeo. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/blob/master/components/datatypes/sessiondetails.schema.json) | Captura detalhes da sessão sobre um evento de reprodução de vídeo. |
+
+{style=&quot;table-layout:auto&quot;}
+
+Para obter mais informações sobre o XDM na Platform, consulte o [Visão geral do sistema XDM](../../xdm/home.md).
 
 ## Fontes {#sources}
 
