Updated by task 'AutomatedMDTask_1658789188552_TM-MT_1658789278851'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/cf38cd14b7437dceb451981b54d2cd25a0a8f134

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: bfb6ff054feea6dc0dcc1c98dadb158be79a284b
+source-git-commit: 9f5ccd554c6767de19a93e179034de38c830c002
 workflow-type: tm+mt
-source-wordcount: '944'
+source-wordcount: '1074'
 ht-degree: 5%
 
 ---
@@ -14,9 +14,24 @@ ht-degree: 5%
 
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
+- [Coleta de dados](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [Experience Data Model (XDM)](#xdm)
 - [Fontes](#sources)
+
+## Coleta de dados {#collection}
+
+A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente e enviá-los para a Adobe Experience Platform Edge Network, onde podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não-Adobe.
+
+**Novos recursos**
+
+| Recurso | Descrição |
+| --- | --- |
+| Gerenciamento de permissões por meio do Adobe Admin Console | O acesso aos recursos de coleta de dados agora é gerenciado pelo Adobe Admin Console no cartão da Coleta de dados da Adobe Experience Platform. Consulte o guia sobre [permissões de coleta de dados](../../collection/permissions.md) para obter mais informações.<br><br>As permissões para datastreams também são gerenciadas pelo Admin Console no cartão do Adobe Experience Platform, melhorando a segurança em relação ao método anterior de configuração manual dessas permissões para cada usuário. |
+
+{style=&quot;table-layout:auto&quot;}
+
+Para obter mais informações, consulte o [visão geral da coleta de dados](../../collection/home.md).
 
 ## [!DNL Data Prep] {#data-prep}
 
@@ -72,6 +87,8 @@ Para obter mais informações sobre o XDM na Platform, consulte o [Visão geral 
 A Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, permitir estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
 
 O Experience Platform fornece uma RESTful API e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e se conectar a sistemas de armazenamento externos e serviços CRM, definir horários para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+
+**Novos recursos**
 
 | Recurso | Descrição |
 | --- | --- |
