Updated by task 'AutomatedMDTask_1658874445676_TM-MT_1658874549183'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/874b04faccb245e909e08977a8a95796722cf233

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 9f5ccd554c6767de19a93e179034de38c830c002
+source-git-commit: 6fdc7a06e845db0af81a6c7f20e3bef2c4756ad3
 workflow-type: tm+mt
-source-wordcount: '1074'
+source-wordcount: '1153'
 ht-degree: 5%
 
 ---
@@ -51,6 +51,12 @@ Para saber mais sobre [!DNL Data Prep], consulte o [[!DNL Data Prep] visão gera
 ## Experience Data Model (XDM) {#xdm}
 
 O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Ao seguir os padrões XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de uma maneira mais rápida e integrada. Você pode obter informações valiosas das ações do cliente, definir públicos-alvo do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+
+**Novos recursos**
+
+| Recurso | Descrição |
+| --- | --- |
+| Modelo de dados do setor de saúde | Um modelo padrão de dados de saúde foi introduzido para suportar cinco casos comuns de uso do setor relacionados ao aumento da aquisição digital, ao aprimoramento da inscrição no programa e à promoção de informações sobre drogas. Consulte a visão geral no [modelo de dados de saúde](../../xdm/schema/industries/healthcare.md) para obter mais informações sobre esses casos de uso e os componentes padrão do XDM que os suportam.<br><br>Um novo filtro do setor foi adicionado ao [!UICONTROL Esquemas] Interface do usuário para ajudá-lo a navegar pelos componentes relacionados ao sistema de saúde ao criar esquemas personalizados. |
 
 **Novos componentes XDM**
 
