Updated by task 'AutomatedMDTask_1658878947879_TM-MT_1658879044512'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c5578bd6ecce2c2c12e7f531e1d1be50774f50ec

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 6fdc7a06e845db0af81a6c7f20e3bef2c4756ad3
+source-git-commit: 9bf4c6c6b5de9b9461c1ec29bf791e4268fa5330
 workflow-type: tm+mt
-source-wordcount: '1153'
-ht-degree: 5%
+source-wordcount: '1316'
+ht-degree: 4%
 
 ---
 
@@ -12,12 +12,28 @@ ht-degree: 5%
 
 **Data de lançamento: 27 de julho de 2022**
 
+Novos recursos no Adobe Experience Platform:
+
+- [Lead para a correspondência da conta na CDP B2B](#B2B)
+
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
 - [Coleta de dados](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [Experience Data Model (XDM)](#xdm)
 - [Fontes](#sources)
+
+## Lead para a correspondência da conta na CDP B2B (#lead-to-account-match)
+
+As empresas B2B geralmente têm as informações de seus clientes armazenadas em vários sistemas, cada um incluindo apenas dados parciais ou até mesmo conflitantes para a mesma entidade de negócios real. Isto cria um enorme desafio de chegar a uma visão precisa dos seus clientes, reduzindo assim a eficiência e a eficácia dos seus esforços de marketing e vendas B2B. Com o lançamento do lead para a correspondência da conta, a CDP B2B corresponde perfis de pessoa conhecidos para perfis da conta, para que possam ser segmentados e direcionados com dados de contexto B2B, como conta, oportunidade etc.
+
+Leia mais sobre o recurso nas seguintes páginas de documentação:
+
+- [Lead para correspondência de contas na CDP B2B](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md)
+- [Leia o enriquecimento do perfil de correspondência da conta no guia de enriquecimento do perfil do monitor](../../dataflows/ui/b2b/monitor-profile-enrichment.md)
+- [Como usar contas relacionadas em definições de segmento](../../rtcdp/segmentation/b2b.md#related-accounts)
+
+Para saber mais sobre a Real-time CDP B2B Edition, consulte o [visão geral](../../rtcdp/overview.md).
 
 ## Coleta de dados {#collection}
 
