Updated by task 'AutomatedMDTask_1658879677865_TM-MT_1658879777017'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/6b094fee4f99a3d1eb97ef5fe51c5d32639f149d

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 9bf4c6c6b5de9b9461c1ec29bf791e4268fa5330
+source-git-commit: 9c240b501001bd026444e6859948527a2871be15
 workflow-type: tm+mt
-source-wordcount: '1316'
+source-wordcount: '1640'
 ht-degree: 4%
 
 ---
@@ -18,6 +18,7 @@ Novos recursos no Adobe Experience Platform:
 
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
+- [Painéis](#dashboards)
 - [Coleta de dados](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [Experience Data Model (XDM)](#xdm)
@@ -34,6 +35,49 @@ Leia mais sobre o recurso nas seguintes páginas de documentação:
 - [Como usar contas relacionadas em definições de segmento](../../rtcdp/segmentation/b2b.md#related-accounts)
 
 Para saber mais sobre a Real-time CDP B2B Edition, consulte o [visão geral](../../rtcdp/overview.md).
+
+## Painéis {#dashboards}
+
+O Adobe Experience Platform fornece vários [!DNL dashboards] através do qual você pode visualizar informações importantes sobre os dados de sua organização, conforme capturados durante os instantâneos diários.
+
+### Painéis de perfis de conta
+
+O painel Perfis da conta exibe um instantâneo das informações unificadas da conta de várias fontes em seus canais de marketing e os diversos sistemas que sua organização usa atualmente para armazenar informações da conta do cliente.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Total de contas por widget do setor | Esse widget exibe o número total de contas em uma única métrica e usa um gráfico de rosca para ilustrar os tamanhos proporcionais de contagens para os setores que compõem o número geral. |
+| Widget de adição de perfis da conta | Esse widget usa um gráfico de barras codificadas por cores para ilustrar a contagem de perfis adicionados a uma conta em um determinado período e a proporção de setores diferentes que constituem esses perfis adicionados. |
+
+Consulte a [Visão geral da CDP em tempo real, B2B Edition](../../rtcdp/b2b-overview.md) para saber mais sobre os recursos B2B disponíveis ou a [tutorial completo](../../rtcdp/b2b-tutorial.md) Para saber mais sobre como os perfis de conta são criados como parte do fluxo de trabalho B2B.
+
+Para obter mais informações sobre os widgets disponíveis para visualizar métricas relacionadas ao perfil da conta, consulte o [documentação dos widgets de perfis de conta](../../dashboards/guides/account-profiles.md#standard-widgets).
+
+### Painéis de perfil
+
+O painel Perfis exibe um instantâneo dos dados de atributo (registro) que sua organização tem na Loja de perfis no Experience Platform.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Dispositivo de públicos-alvo mapeados | Este widget exibe o número total de públicos-alvo mapeados que podem ser ativados no destino selecionado na lista suspensa Painel de perfis . |
+
+Para obter mais informações sobre o painel Perfis , consulte o [Visão geral dos painéis de perfis](../../dashboards/guides/profiles.md).
+
+### Painéis de destinos
+
+O painel Destinos exibe um instantâneo dos destinos que sua organização habilitou no Experience Platform.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Dispositivo de públicos-alvo | Este widget fornece o número total de segmentos prontos para serem ativados, de acordo com a política de mesclagem escolhida aplicada aos dados do seu perfil. |
+
+Para saber mais sobre o painel Destinos, consulte [a visão geral do painel Destinos](../../dashboards/guides/destinations.md).
 
 ## Coleta de dados {#collection}
 
