Updated by task 'AutomatedMDTask_1658882012474_TM-MT_1658882137260'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ca9193a47cd8cba660f9091194ac4022ad99eef8

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 9c240b501001bd026444e6859948527a2871be15
+source-git-commit: 95a4b79612a10554c60a3f22086a3c5829526987
 workflow-type: tm+mt
-source-wordcount: '1640'
+source-wordcount: '1637'
 ht-degree: 4%
 
 ---
@@ -14,7 +14,7 @@ ht-degree: 4%
 
 Novos recursos no Adobe Experience Platform:
 
-- [Lead para a correspondência da conta na CDP B2B](#B2B)
+- [Real-time Customer Data Platform B2B](#B2B)
 
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
@@ -24,7 +24,7 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Experience Data Model (XDM)](#xdm)
 - [Fontes](#sources)
 
-## Lead para a correspondência da conta na CDP B2B (#lead-to-account-match)
+## Real-time Customer Data Platform B2B (#b2b)
 
 As empresas B2B geralmente têm as informações de seus clientes armazenadas em vários sistemas, cada um incluindo apenas dados parciais ou até mesmo conflitantes para a mesma entidade de negócios real. Isto cria um enorme desafio de chegar a uma visão precisa dos seus clientes, reduzindo assim a eficiência e a eficácia dos seus esforços de marketing e vendas B2B. Com o lançamento do lead para a correspondência da conta, a CDP B2B corresponde perfis de pessoa conhecidos para perfis da conta, para que possam ser segmentados e direcionados com dados de contexto B2B, como conta, oportunidade etc.
 
