Updated by task 'AutomatedMDTask_1658884602902_TM-MT_1658884735803'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/3a2adb49cf35405f9b0d8ed2f8d68e89b5311727

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 95a4b79612a10554c60a3f22086a3c5829526987
+source-git-commit: 680f53e43dd52289aae478ebdea5983e65420185
 workflow-type: tm+mt
-source-wordcount: '1637'
+source-wordcount: '1858'
 ht-degree: 4%
 
 ---
@@ -22,6 +22,7 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Coleta de dados](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [Experience Data Model (XDM)](#xdm)
+- [Perfil do cliente em tempo real](#profile)
 - [Fontes](#sources)
 
 ## Real-time Customer Data Platform B2B (#b2b)
@@ -147,6 +148,18 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 {style=&quot;table-layout:auto&quot;}
 
 Para obter mais informações sobre o XDM na Platform, consulte o [Visão geral do sistema XDM](../../xdm/home.md).
+
+## Perfil do cliente em tempo real {#profile}
+
+O Adobe Experience Platform permite que você conduza experiências coordenadas, consistentes e relevantes para seus clientes, independentemente de onde ou quando eles interagirem com sua marca. Com o Perfil do cliente em tempo real, você pode ver uma visualização holística de cada cliente individual que combina dados de vários canais, incluindo dados online, offline, CRM e de terceiros. O Perfil permite consolidar os dados do cliente em uma visualização unificada, oferecendo uma conta acionável com carimbo de data e hora de cada interação com o cliente.
+
+| Recurso | Descrição |
+| ------- | ----------- |
+| Limpeza de atributo de borda de perfil órfão (versão limitada) | Se sua organização tiver acesso a esse recurso, o Serviço de perfil agora remove os atributos de borda esquerda da região da atividade do usuário diariamente para fornecer uma representação mais precisa dos perfis em seu sistema. Essa limpeza ocorre depois que todos os fragmentos de perfil de um determinado perfil são excluídos e deve afetar os perfis que estão sendo mesclados de conjuntos de dados em que `com_adobe_aep_profile_region_dataset` está marcado como verdadeiro. Isso pode mostrar uma queda na métrica &quot;Público-alvo endereçável&quot; no painel de uso da licença e pode mostrar uma queda na métrica &quot;Contagem de perfil&quot; no painel Perfil, já que essas métricas incluíam fragmentos de atributo de borda esquerda antes desta versão. |
+
+{style=&quot;table-layout:auto&quot;}
+
+Para saber mais sobre o Perfil do cliente em tempo real, incluindo tutoriais e práticas recomendadas para trabalhar com dados de perfil, comece lendo o [Visão geral do perfil do cliente em tempo real](../../profile/home.md).
 
 ## Fontes {#sources}
 
