Updated by task 'AutomatedMDTask_1658936699246_TM-MT_1658936834238'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/fe2fbe3ae5326a37230dc8eb6a7f7a02237de7c9

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 680f53e43dd52289aae478ebdea5983e65420185
+source-git-commit: fc910ec906e2d59f3a35b81377f7c97b7cafbabe
 workflow-type: tm+mt
-source-wordcount: '1858'
-ht-degree: 4%
+source-wordcount: '1707'
+ht-degree: 5%
 
 ---
 
@@ -12,30 +12,15 @@ ht-degree: 4%
 
 **Data de lançamento: 27 de julho de 2022**
 
-Novos recursos no Adobe Experience Platform:
-
-- [Real-time Customer Data Platform B2B](#B2B)
-
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
 - [Painéis](#dashboards)
 - [Coleta de dados](#collection)
 - [[!DNL Data Prep]](#data-prep)
 - [Experience Data Model (XDM)](#xdm)
+<!-- - [Real-time Customer Data Platform B2B Edition](#b2b) -->
 - [Perfil do cliente em tempo real](#profile)
 - [Fontes](#sources)
-
-## Real-time Customer Data Platform B2B (#b2b)
-
-As empresas B2B geralmente têm as informações de seus clientes armazenadas em vários sistemas, cada um incluindo apenas dados parciais ou até mesmo conflitantes para a mesma entidade de negócios real. Isto cria um enorme desafio de chegar a uma visão precisa dos seus clientes, reduzindo assim a eficiência e a eficácia dos seus esforços de marketing e vendas B2B. Com o lançamento do lead para a correspondência da conta, a CDP B2B corresponde perfis de pessoa conhecidos para perfis da conta, para que possam ser segmentados e direcionados com dados de contexto B2B, como conta, oportunidade etc.
-
-Leia mais sobre o recurso nas seguintes páginas de documentação:
-
-- [Lead para correspondência de contas na CDP B2B](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md)
-- [Leia o enriquecimento do perfil de correspondência da conta no guia de enriquecimento do perfil do monitor](../../dataflows/ui/b2b/monitor-profile-enrichment.md)
-- [Como usar contas relacionadas em definições de segmento](../../rtcdp/segmentation/b2b.md#related-accounts)
-
-Para saber mais sobre a Real-time CDP B2B Edition, consulte o [visão geral](../../rtcdp/overview.md).
 
 ## Painéis {#dashboards}
 
@@ -51,6 +36,8 @@ O painel Perfis da conta exibe um instantâneo das informações unificadas da c
 | --- | --- |
 | Total de contas por widget do setor | Esse widget exibe o número total de contas em uma única métrica e usa um gráfico de rosca para ilustrar os tamanhos proporcionais de contagens para os setores que compõem o número geral. |
 | Widget de adição de perfis da conta | Esse widget usa um gráfico de barras codificadas por cores para ilustrar a contagem de perfis adicionados a uma conta em um determinado período e a proporção de setores diferentes que constituem esses perfis adicionados. |
+
+{style=&quot;table-layout:auto&quot;}
 
 Consulte a [Visão geral da CDP em tempo real, B2B Edition](../../rtcdp/b2b-overview.md) para saber mais sobre os recursos B2B disponíveis ou a [tutorial completo](../../rtcdp/b2b-tutorial.md) Para saber mais sobre como os perfis de conta são criados como parte do fluxo de trabalho B2B.
 
@@ -77,6 +64,8 @@ O painel Destinos exibe um instantâneo dos destinos que sua organização habil
 | Recurso | Descrição |
 | --- | --- |
 | Dispositivo de públicos-alvo | Este widget fornece o número total de segmentos prontos para serem ativados, de acordo com a política de mesclagem escolhida aplicada aos dados do seu perfil. |
+
+{style=&quot;table-layout:auto&quot;}
 
 Para saber mais sobre o painel Destinos, consulte [a visão geral do painel Destinos](../../dashboards/guides/destinations.md).
 
@@ -119,6 +108,8 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 | --- | --- |
 | Modelo de dados do setor de saúde | Um modelo padrão de dados de saúde foi introduzido para suportar cinco casos comuns de uso do setor relacionados ao aumento da aquisição digital, ao aprimoramento da inscrição no programa e à promoção de informações sobre drogas. Consulte a visão geral no [modelo de dados de saúde](../../xdm/schema/industries/healthcare.md) para obter mais informações sobre esses casos de uso e os componentes padrão do XDM que os suportam.<br><br>Um novo filtro do setor foi adicionado ao [!UICONTROL Esquemas] Interface do usuário para ajudá-lo a navegar pelos componentes relacionados ao sistema de saúde ao criar esquemas personalizados. |
 
+{style=&quot;table-layout:auto&quot;}
+
 **Novos componentes XDM**
 
 >[!WARNING]
@@ -148,6 +139,17 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 {style=&quot;table-layout:auto&quot;}
 
 Para obter mais informações sobre o XDM na Platform, consulte o [Visão geral do sistema XDM](../../xdm/home.md).
+
+<!-- ## Real-time Customer Data Platform B2B Edition {#b2b}
+
+Built on Real-time Customer Data Platform (Real-time CDP), Real-time CDP B2B Edition is purpose-built for marketers operating in a business-to-business service model. It brings together data from multiple sources and combines it into a single view of people and account profiles. This unified data allows marketers to precisely target specific audiences and engage those audiences across all available channels.
+
+| Feature | Description |
+| Lead to account matching | Lead to account matching allows you to use Real-time CDP B2B edition to match known person profiles to account profiles so that these profiles can be segmented and targeted with B2B context data like account, opportunity (and add something else like don't use etc. to the description). For more information, see the document on [lead to account matching](../../rtcdp/b2b-ai-ml-services/lead-to-account-matching.md). For a guide on how to monitor profile enrichment, see the document on [monitoring profile enrichment in the UI](../../dataflows/ui/b2b/monitor-profile-enrichment.md). For instructions on how to use related accounts in segment definitions, see the guide on [Segmentation use cases for Real-time Customer Data Platform B2B Edition](../../rtcdp/segmentation/b2b.md#related-accounts)."|
+
+{style="table-layout:auto"}
+
+To learn more about Real-time CDP B2B Edition, see the [Real-time CDP B2B overview](../../rtcdp/overview.md). -->
 
 ## Perfil do cliente em tempo real {#profile}
 
