--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -1,9 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
-source-git-commit: 93ac391370ddd1fe596b8515bd520fb870a10a3c
+exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
+source-git-commit: 45a69586dbe492a9cfe64383adc44be62854154a
 workflow-type: tm+mt
-source-wordcount: '1914'
+source-wordcount: '1885'
 ht-degree: 5%
 
 ---
@@ -94,11 +95,14 @@ Para obter mais informações, consulte o [visão geral da coleta de dados](../.
 | Recurso | Descrição |
 | --- | --- |
 | Melhorias a [!DNL Data Prep] Recommendations | [!DNL Data Prep] O Recommendations agora é mais inteligente e rápido. As novas verificações de validação reduzem significativamente os erros de mapeamento mais comuns, reduzindo ainda mais o tempo para o valor. |
-| Suporte hierárquico para upsets de transmissão | Agora você pode usar funções `upsert_array_append` e `upsert_array_replace` para atualizar arrays e objetos ao fazer o streaming de atualizações no Perfil. Consulte a [[!DNL Data Prep] guia de funções de mapeamento](../../data-prep/functions.md) para obter mais informações. |
 
 {style=&quot;table-layout:auto&quot;}
 
 Para saber mais sobre [!DNL Data Prep], consulte o [[!DNL Data Prep] visão geral](../../data-prep/home.md).
+
+<!--
+| Hierarchical support for streaming upsets | You can now use functions `upsert_array_append` and `upsert_array_replace` to update arrays and objects when streaming upserts to Profile. See the [[!DNL Data Prep] mapping functions guide](../../data-prep/functions.md) for more information. |
+-->
 
 ## [!DNL Destinations] {#destinations}
 
@@ -205,4 +209,3 @@ O Experience Platform fornece uma RESTful API e uma interface interativa que per
 {style=&quot;table-layout:auto&quot;}
 
 Para saber mais sobre fontes, consulte o [visão geral das fontes](../../sources/home.md).
-
