Updated by task 'AutomatedMDTask_1659036776506_TM-MT_1659036883046'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ecaef456e1c19c2262ded0ddcd89406bdabb1d34

--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para o Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 1ab1c269fd43368e059a76f96b3eb3ac4e7b8388
+source-git-commit: 7f1e4bdf54314cab1f69619bcbb34216da94b17e
 workflow-type: tm+mt
-source-wordcount: '2405'
+source-wordcount: '2401'
 ht-degree: 5%
 
 ---
@@ -54,7 +54,7 @@ O Experience Platform fornece um conjunto de recursos de higiene de dados que pe
 
 >[!IMPORTANT]
 >
->Atualmente, os recursos de higiene de dados estão disponíveis apenas para organizações que compraram a oferta adicional Adobe Shield for Healthcare .
+>Atualmente, os recursos de higiene de dados estão disponíveis apenas para organizações que compraram a oferta complementar do Healthcare Shield.
 
 **Novos recursos**
 
@@ -163,7 +163,7 @@ A Governança de dados da Adobe Experience Platform é uma série de estratégia
 
 | Recurso | Descrição |
 | ------- | ----------- |
-| Aplicação da política de consentimento (disponibilidade limitada) | Se a sua organização adquiriu a oferta adicional Adobe Shield for Healthcare, agora você pode [criar políticas de consentimento](../../data-governance/policies/user-guide.md#consent-policy) para automaticamente [impor consentimentos e preferências do cliente na participação do segmento](../../data-governance/enforcement/auto-enforcement.md#consent-policy-evaluation). |
+| Aplicação da política de consentimento (disponibilidade limitada) | Se a sua organização adquiriu a oferta complementar do Healthcare Shield, agora você pode [criar políticas de consentimento](../../data-governance/policies/user-guide.md#consent-policy) para automaticamente [impor consentimentos e preferências do cliente na participação do segmento](../../data-governance/enforcement/auto-enforcement.md#consent-policy-evaluation). |
 
 {style=&quot;table-layout:auto&quot;}
 
