Updated by task 'AutomatedMDTask_1659050084424_TM-MT_1659050216845'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/709722282f1d8970214e25b4e7f01e2193743f88

--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 para o Adobe Experience Platform.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: 4876df90e7e715c89e0614a9e1e81c3e7091bccb
+source-git-commit: 7cb940019905240b36e96b834b9e5d0166c1324d
 workflow-type: tm+mt
-source-wordcount: '2086'
+source-wordcount: '2115'
 ht-degree: 4%
 
 ---
@@ -95,14 +95,11 @@ Para obter mais informações, consulte o [visão geral da coleta de dados](../.
 | Recurso | Descrição |
 | --- | --- |
 | Melhorias a [!DNL Data Prep] Recommendations | [!DNL Data Prep] O Recommendations agora é mais inteligente e rápido. As novas verificações de validação reduzem significativamente os erros de mapeamento mais comuns, reduzindo ainda mais o tempo para o valor. |
+| Suporte hierárquico para upsets de transmissão | Agora você pode usar funções `upsert_array_append` e `upsert_array_replace` para atualizar arrays e objetos ao fazer o streaming de atualizações no Perfil. Consulte a [[!DNL Data Prep] guia de funções de mapeamento](../../data-prep/functions.md) para obter mais informações. |
 
 {style=&quot;table-layout:auto&quot;}
 
 Para saber mais sobre [!DNL Data Prep], consulte o [[!DNL Data Prep] visão geral](../../data-prep/home.md).
-
-<!--
-| Hierarchical support for streaming upsets | You can now use functions `upsert_array_append` and `upsert_array_replace` to update arrays and objects when streaming upserts to Profile. See the [[!DNL Data Prep] mapping functions guide](../../data-prep/functions.md) for more information. |
--->
 
 ## [!DNL Destinations] {#destinations}
 
