--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para o Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 7f1e4bdf54314cab1f69619bcbb34216da94b17e
+source-git-commit: 04cf9c366b0495d23979643bd9f9e2da46d6a2f2
 workflow-type: tm+mt
 source-wordcount: '2401'
 ht-degree: 5%
@@ -22,7 +22,7 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 
 - [Alertas](#alerts)
 - [Logs de auditoria](#audit-logs)
-- [Painéis](#dashbaords)
+- [Painéis](#dashboards)
 - [Coleta de dados](#data-collection)
 - [Governança de dados](#data-governance)
 - [Preparação de dados](#data-prep)
